# buddies

./: .gitignore  pyproject.toml
electrical/: .gitignore  README.md
electrical/ato-drive/: .gitattributes  README.md  ato.yaml  pyproject.toml
electrical/buddies/: buddies.kicad_sym
electrical/g2-world/: sym-lib-table
electrical/g3-native/: fp-lib-table  g3-native.kicad_pro  g3-native.kicad_sch
electrical/lib/: buddies.kicad_sym
firmware/: .gitignore  Cargo.toml  memory.x  run.py
firmware/.cargo/: config.toml
firmware/.claude/skills/reader-mindset/: SKILL.md
firmware/host/: channels.py  harness.py  listener.py  pyproject.toml
firmware/src/: bearing.rs  chirp.rs  main.rs  peers.rs  time_driver.rs
firmware/src/pal/: mod.rs  semihosting.rs  socket.rs  uart.rs
firmware/ui/: Cargo.toml
firmware/ui/src/: frame.rs  lib.rs  mode.rs  oled.rs  tap.rs
firmware/ui/tests/: oled_png.rs
hardware/: cube.stl  enclosure.stl
hardware/blinky/: main.ato
mechanical/: .gitignore  assembly.glb  buddy.blend  cube.py  display.blend1  enclosure.blend  enclosure.py  pyproject.toml
mechanical/blender/: sync.py
mechanical/buddy/: __init__.py  __main__.py  acoustics.py  assembly.py  dimensions.py  display.py  export.py  housing.py  materials.py
pcb/buddies/: buddies.kicad_pro  buddies.kicad_sch
simulation/: .gitignore  README.md  pyproject.toml
simulation/notes/: frequency_window.ipynb  frequency_window.py  link_budget.ipynb  link_budget.py  rx_frontend.ipynb  rx_frontend.py  tx_resonant_keying.ipynb  tx_resonant_keying.py
simulation/notes/.ipynb_checkpoints/: frequency_window-checkpoint.ipynb  frequency_window-checkpoint.py
simulation/simulations/buddy_link/: simulate.py  view.py
simulation/simulations/hello_world/: simulate.py
simulation/simulations/model_array_mimo/: simulate.py
simulation/simulations/model_array_mimo_snr/: simulate.py  view.py
simulation/tools/: analyse.py  report.py  test_analyse.py
simulations/: beamforming.py  direction_finding.py  echo_mic.py  hello_world.py  microphone.py  open_water.py  pulse_echo.py  sonar_listen.py  sonar_sweep.py  sonar_sweep2.py  sonar_sweep3.py  sonar_sweep4.py  steered_array.py  tracking.py  two_sources.py
simulations/beamforming/: simulate.py
simulations/characterise/: simulate.py  view.py
simulations/direction_finding/: simulate.py
simulations/echo_mic/: simulate.py
simulations/hello_world/: simulate.py
simulations/microphone/: simulate.py
simulations/model_array_mimo/: view.py
simulations/model_array_mimo_snr/: simulate.py
simulations/model_array_rx/: simulate.py  view.py
simulations/model_array_rx_snr/: simulate.py
simulations/model_array_tx_snr/: simulate.py
simulations/model_comms_wreck/: simulate.py  view.py
simulations/model_compare/: simulate.py
simulations/model_link/: simulate.py  view.py
simulations/model_link_noise/: simulate.py
simulations/model_link_wreck/: view.py
simulations/model_lora_noise/: simulate.py  view.py
simulations/model_lora_sf/: simulate.py  view.py
simulations/model_lora_sync/: simulate.py
simulations/ook_eye/: simulate.py  view.py
simulations/ook_link/: simulate.py
simulations/open_water/: simulate.py
simulations/pulse_echo/: simulate.py
simulations/sonar_listen/: simulate.py
simulations/sonar_listen2/: simulate.py
simulations/sonar_listen3/: simulate.py
simulations/sonar_listen4/: simulate.py  view.py
simulations/sonar_sweep/: simulate.py
simulations/sonar_sweep2/: simulate.py
simulations/sonar_sweep3/: simulate.py
simulations/sonar_sweep4/: simulate.py
simulations/steered_array/: simulate.py
simulations/tracking/: simulate.py
simulations/transducer_link/: simulate.py
simulations/two_sources/: simulate.py
src/buddies/: backend.py  boundaries.py  capture.py  cli.py  noise.py  probe.py  process.py  run_sim.py  sim.py  simargs.py  store.py  viewer.py
(+101 files in other folders)
