[project]
name = "buddies"
version = "0.1.0"
description = "FDTD simulation of underwater acoustics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.1",
]

[project.scripts]
viewer = "buddies.viewer:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
