[package]
name = "buddies-fw"
version = "0.1.0"
edition = "2024"

[features]
default = ["pal-semihosting"]
pal-semihosting = []
pal-socket = []

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-semihosting = { version = "0.6", features = ["exit"] }
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread"] }
static_cell = "2"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
